[package]
name = "buff-expert"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
winres = "0.1.12"

[dependencies]
colored = "3.0.0"
regex = "1"
serde_json = "1.0.140"
winconsole = "0.11.1"
#reqwest = { version = "0.11", features = ["json"] }
rust-translate = "0.1.2"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
#serde = { version = "1.0", features = ["derive"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimization level 3.
codegen-units = 1 # Maximum size reduction optimizations.
